# MODO_REPO

./: .gitignore  README.md  Servers
LXSDK_17_251515/: CMakeLists.txt  LXSDK_17_251515.sln  README.md  lxsdk.props  lxsdk.vcxproj  lxsdk.vcxproj.filters
LXSDK_17_251515/common/: clean.cpp  cwrap.cpp  initialize.cpp  lxu_attrdesc.cpp  lxu_attributes.cpp  lxu_chanmod.cpp  lxu_command.cpp  lxu_deform.cpp  lxu_dialog.cpp  lxu_drawover.cpp  lxu_drop.cpp  lxu_format.cpp  lxu_geometry.cpp  lxu_geometry_triangulation.cpp  lxu_io.cpp  lxu_log.cpp  lxu_math.cpp  lxu_matrix.cpp  lxu_message.cpp  lxu_meta.cpp  lxu_modifier.cpp  lxu_octree.cpp  lxu_package.cpp  lxu_parser.cpp  lxu_prefvalue.cpp  lxu_quaternion.cpp  lxu_queries.cpp  lxu_rendercontext.cpp  lxu_scene.cpp  lxu_schematic.cpp  lxu_select.cpp  lxu_shade.cpp  lxu_simd.cpp  lxu_surface.cpp  lxu_tableau.cpp  lxu_value.cpp  lxu_vector.cpp  lxu_vectorarray.cpp  util.cpp
LXSDK_17_251515/docs/: index.html
LXSDK_17_251515/include/: lx_action.hpp  lx_actionclip.hpp  lx_anim.hpp  lx_audio.hpp  lx_canvasitem.hpp  lx_chanmod.hpp  lx_channelui.hpp  lx_clip.hpp  lx_cliped.hpp  lx_color.hpp  lx_colormapping.hpp  lx_com.hpp  lx_command.hpp  lx_customview.hpp  lx_deform.hpp  lx_dirbrowse.hpp  lx_draw.hpp  lx_drawover.hpp  lx_drop.hpp  lx_envelope.hpp  lx_externalrender.hpp  lx_file.hpp  lx_filter.hpp  lx_force.hpp  lx_formsys.hpp  lx_group.hpp  lx_groupui.hpp  lx_handles.hpp  lx_image.hpp  lx_imagemon.hpp  lx_inputmap.hpp  lx_interviewer.hpp  lx_intrange.hpp  lx_io.hpp  lx_item.hpp  lx_itemui.hpp  lx_layer.hpp  lx_listcache.hpp  lx_listener.hpp  lx_locator.hpp  (+291 more)
LXSDK_17_251515/samples/channel_modifier/: channel_modifier_double.vcxproj  channel_modifier_double.vcxproj.filters  channel_modifier_linear_blend.vcxproj  channel_modifier_linear_blend.vcxproj.filters  channel_modifier_simple_kinematics.vcxproj  channel_modifier_simple_kinematics.vcxproj.filters  channel_modifier_simwave.vcxproj  channel_modifier_simwave.vcxproj.filters  channel_modifier_sum.vcxproj  channel_modifier_sum.vcxproj.filters
LXSDK_17_251515/samples/channel_modifier/double/: cc_chanmod_double.cpp
LXSDK_17_251515/samples/color_model/: color_model_hsv.vcxproj  color_model_hsv.vcxproj.filters
LXSDK_17_251515/samples/command/: command_alignschema.vcxproj  command_alignschema.vcxproj.filters  command_arg.vcxproj  command_arg.vcxproj.filters  command_filename.vcxproj  command_filename.vcxproj.filters  command_mesh.vcxproj  command_mesh.vcxproj.filters  command_modallayout.vcxproj  command_modallayout.vcxproj.filters  command_popup.vcxproj  command_popup.vcxproj.filters  command_rendercache.vcxproj  command_rendercache.vcxproj.filters  command_vertvalue.vcxproj  command_vertvalue.vcxproj.filters
LXSDK_17_251515/samples/custom_material/: custom_material_cel.vcxproj  custom_material_cel.vcxproj.filters  custom_material_cel_edges.vcxproj  custom_material_cel_edges.vcxproj.filters  custom_material_halftone.vcxproj  custom_material_halftone.vcxproj.filters  custom_material_skin.vcxproj  custom_material_skin.vcxproj.filters
LXSDK_17_251515/samples/drop/: drop_files.vcxproj  drop_files.vcxproj.filters  drop_items.vcxproj  drop_items.vcxproj.filters
LXSDK_17_251515/samples/file_io/: file_io_image_basicload.vcxproj  file_io_image_basicload.vcxproj.filters  file_io_image_basicsave.vcxproj  file_io_image_basicsave.vcxproj.filters  file_io_scene_geo.vcxproj  file_io_scene_geo.vcxproj.filters  file_io_scene_hpgl.vcxproj  file_io_scene_hpgl.vcxproj.filters  file_io_scene_itemsaver.vcxproj  file_io_scene_itemsaver.vcxproj.filters  file_io_scene_loadoptions.vcxproj  file_io_scene_loadoptions.vcxproj.filters  file_io_scene_objio.vcxproj  file_io_scene_objio.vcxproj.filters
LXSDK_17_251515/samples/image_monitor/: image_monitor_histogram.vcxproj  image_monitor_histogram.vcxproj.filters
LXSDK_17_251515/samples/item_type/: item_type_falloff_box.vcxproj  item_type_falloff_box.vcxproj.filters  item_type_falloff_linear.vcxproj  item_type_falloff_linear.vcxproj.filters  item_type_falloff_radial.vcxproj  item_type_falloff_radial.vcxproj.filters  item_type_force_linear.vcxproj  item_type_force_linear.vcxproj.filters  item_type_influence_morph.vcxproj  item_type_influence_morph.vcxproj.filters  item_type_particle_gasket.vcxproj  item_type_particle_gasket.vcxproj.filters  item_type_psim_shield.vcxproj  item_type_psim_shield.vcxproj.filters  item_type_surface_sphere.vcxproj  item_type_surface_sphere.vcxproj.filters  item_type_volume_ground.vcxproj  item_type_volume_ground.vcxproj.filters
LXSDK_17_251515/samples/mesh_operations/: mesh_operations_create_vertex.vcxproj  mesh_operations_create_vertex.vcxproj.filters
LXSDK_17_251515/samples/modifier/: modifier_time.vcxproj  modifier_time.vcxproj.filters
LXSDK_17_251515/samples/notifier/: notifier_global.vcxproj  notifier_global.vcxproj.filters
LXSDK_17_251515/samples/package/: package_drawover_pass.vcxproj  package_drawover_pass.vcxproj.filters  package_drawover_wireframe.vcxproj  package_drawover_wireframe.vcxproj.filters  package_filepath_asset.vcxproj  package_filepath_asset.vcxproj.filters  package_view3d_overlay.vcxproj  package_view3d_overlay.vcxproj.filters
LXSDK_17_251515/samples/plugins/: plugins_tic_tac_toe.vcxproj  plugins_tic_tac_toe.vcxproj.filters
LXSDK_17_251515/samples/preset/: preset_colorSynthPath.vcxproj  preset_colorSynthPath.vcxproj.filters
LXSDK_17_251515/samples/schematic_connection/: schematic_connection_graph.vcxproj  schematic_connection_graph.vcxproj.filters  schematic_connection_modifier.vcxproj  schematic_connection_modifier.vcxproj.filters
LXSDK_17_251515/samples/selection_type/: selection_type_int.vcxproj  selection_type_int.vcxproj.filters
LXSDK_17_251515/samples/tool/: tool_arc.vcxproj  tool_arc.vcxproj.filters  tool_seashell.vcxproj  tool_seashell.vcxproj.filters  tool_spikey.vcxproj  tool_spikey.vcxproj.filters
LXSDK_17_251515/samples/value/: value_full.vcxproj  value_full.vcxproj.filters
LXSDK_17_251515/samples/value_texture/: value_texture_solid.vcxproj  value_texture_solid.vcxproj.filters
(+566 files in other folders)
